--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.egg-info/
-.ipynb_checkpoints/
 dist/
 build/
 *.py[cod]
@@ -16,3 +15,7 @@ idom_jupyter/static/
 
 # VSCode
 .vscode
+
+# Jupyter
+.ipynb_checkpoints/
+Untitled*.ipynb
