--- a/js/package.json
+++ b/js/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3",
-    "idom-client-react": "^0.4.2",
+    "@jupyterlab/coreutils": "^5.0.0",
+    "idom-client-react": "^0.5.4",
     "lodash": "^4.17.4"
   },
   "jupyterlab": {
