changes to support jupyterlab v3

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ build/
 node_modules/
 
 # Compiled javascript
-idom_jupyter/static/
+idom_jupyter/nbextension/
+idom_jupyter/labextension/
 
 # OS X
 .DS_Store
