--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "idom-client-jupyter",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A client for IDOM implemented using Jupyter widgets",
   "author": "Ryan Morshead",
   "main": "lib/index.js",
@@ -20,25 +20,31 @@
     "dist/*.js"
   ],
   "scripts": {
-    "clean": "rimraf dist/",
-    "prepublish": "webpack",
-    "build": "webpack",
+    "clean": "rimraf dist/ && rimraf ../idom_jupyter/labextension/ && rimraf ../idom_jupyter/nbextension",
+    "prepublish": "npm run clean && npm run build",
+    "build": "webpack && npm run build:labextension",
+    "build:labextension": "jupyter labextension build .",
     "watch": "webpack --watch --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "./node_modules/.bin/prettier --write lib"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.1.1",
-    "rimraf": "^2.6.1",
-    "webpack": "^3.5.5"
+    "@jupyterlab/builder": "^3.0.0-rc.4",
+    "webpack": "^4.41.5",
+    "rimraf": "^2.6.1"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1 || ^2 || ^3",
-    "@jupyterlab/coreutils": "^5.0.0",
+    "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4.0.0-beta.1",
     "idom-client-react": "^0.5.4",
     "lodash": "^4.17.4"
   },
   "jupyterlab": {
-    "extension": "lib/labplugin"
+    "extension": "lib/labplugin",
+    "outputDir": "../idom_jupyter/labextension",
+    "sharedPackages": {
+      "@jupyter-widgets/base": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
   }
 }
