--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 recursive-include idom_jupyter/nbextension *.*
 recursive-include idom_jupyter/labextension *.*
-include idom-client-jupyter.json
+include jupyter-config/**/*.json
