--- a/js/package.json
+++ b/js/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
+    "idom-client-react": "^0.8.5",
     "lodash": "^4.17.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
