--- a/js/package.json
+++ b/js/package.json
@@ -1,8 +1,9 @@
 {
   "name": "idom-client-jupyter",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A client for IDOM implemented using Jupyter widgets",
   "author": "Ryan Morshead",
+  "license": "BSD-3-Clause",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -27,17 +28,15 @@
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
     "watch": "webpack --watch --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier -w lib"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^2.6.1",
-    "webpack": "^5"
+    "webpack": "^5",
+    "rimraf": "^2.6.1"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
+    "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4 || ^6",
     "idom-client-react": "^0.38.1",
     "lodash": "^4.17.4",
     "react": "^17.0.1",
