--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,21 +1,4 @@
-graft idom_jupyter/nbextension
-graft idom_jupyter/labextension
-graft jupyter-config
-
-graft js
-graft tests
-prune **/node_modules
+graft reactpy_jupyter/static
 
 include LICENSE
-include setup.py
-include setup.cfg
 include pyproject.toml
-include install.json
-
-# Patterns to exclude from any directory
-global-exclude *~
-global-exclude *.pyc
-global-exclude *.pyo
-global-exclude .git
-global-exclude .ipynb_checkpoints
-global-exclude *.map
