--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = idom_jupyter
+name = reactpy_jupyter
 author = Ryan Morshead
 author_email=ryan.morshead@gmail.com
-version = attr: idom_jupyter._version.__version__
-description = A client for IDOM implemented using Jupyter widgets
+version = attr: reactpy_jupyter._version.__version__
+description = A client for ReactPy implemented using Jupyter widgets
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/idom-team/idom-jupyter
+url = https://github.com/reactive-python/reactpy-jupyter
 keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
 license = BSD 3-Clause License
 classifiers =
