use preact instead of react

--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "dependencies": {
     "@jupyter-widgets/base": "^6.0.4",
     "@reactpy/client": "0.3.1",
-    "react": "<18",
-    "react-dom": "<18"
+    "preact": "^10.13.2"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.5.0",
     "@types/react": "<18",
     "@types/react-dom": "<18",
-    "@vitejs/plugin-react": "^3.1.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2",
     "vite": "^4.2.1"
