--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["jupyter_packaging~=0.12.3", "setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
