--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "prettier --ignore-path .gitignore --check ."
   },
   "dependencies": {
     "@jupyter-widgets/base": "^6.0.4",
